--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^3.2.0",
+    "css-scroll-snap-polyfill": "^0.1.2",
     "d3": "^5.9.7",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "node-sass": "^4.12.0",
