--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "d3": "^5.9.7",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "node-sass": "^4.12.0",
+    "numeral": "^2.0.6",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.2.0",
     "spin.js": "^4.0.0",
